# maple-server-old

./: .gitignore
Maple Server/: CMakeLists.txt  CMakeSettings.json  DllStreamResponse.h  Globals.h  Maple Server.cpp  Maple Server.h  Maple-Server.cpp  Maple-Server.sln  Maple-Server.vcxproj  Maple-Server.vcxproj.filters  Server.cpp  StringUtilities.cpp
Maple Server/Communication/: MatchedClient.h
Maple Server/Crypto/Wrapper/: AES.cpp  AES.h  RSAEncrypt.cpp  RSAEncrypt.h
Maple Server/Packets/: Handshake.cpp  Handshake.h  Login.cpp  Login.h
Maple Server/Packets/Requests/: Request.cpp  Request.h  RequestType.h
Maple Server/Packets/Responses/: DllStreamResponse.cpp  DllStreamResponse.h  FatalErrorResponse.cpp  HandshakeResponse.cpp  HandshakeResponse.h  HeartbeatResponse.cpp  HeartbeatResponse.h  LoginResponse.cpp  LoginResponse.h  Response.cpp  Response.h  ResponseType.h
Maple Server/TCP/: Client.cpp  pipe_ret_t.h  server_observer.h  tcp_client.cpp  tcp_server.cpp  tcp_server.h
Maple Server/Utils/: MatchedClient.cpp  StringUtilities.cpp  StringUtilities.h
Maple Server/src/: Include.h  client.cpp  tcp_client.cpp  tcp_server.cpp
Maple Server/src/Crypto/Wrapper/: AES.cpp  AES.h  RSAEncrypt.cpp  RSAEncrypt.h
Maple Server/src/Includes/cpr/: auth.cpp  cookies.cpp  curlholder.cpp  parameters.cpp  payload.cpp  session.cpp  timeout.cpp  unix_socket.cpp  util.cpp
Maple Server/src/Includes/linux-pe/: linuxpe
Maple Server/src/Packets/: Handshake.cpp  Handshake.h  Login.cpp  Login.h
Maple Server/src/Utils/: MatchedClient.cpp  StringUtilities.cpp
Maple Server/src/include/: tcp_server.h
